# cookiecutter-fair-test

./: README.md  cookiecutter.json
hooks/: post_gen_project.py  pre_gen_project.py
{{cookiecutter.package_name}}/: .env  .gitignore  CITATION.cff  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml
{{cookiecutter.package_name}}/.github/workflows/: test.yml
{{cookiecutter.package_name}}/metrics/: f2_grounded_metadata.py
{{cookiecutter.package_name}}/tests/: test_metrics.py
