[project]
version = "0.1.0"
name = "{{cookiecutter.package_name}}"
description = "{{cookiecutter.description}}"
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE" }
authors = [
    { name = "{{cookiecutter.author_name}}", email = "{{cookiecutter.author_email}}" },
]
keywords = [
    "FAIR tests",
    "FAIR",
    "tests",
    "evaluation",
]

dependencies = [
    "fair-test>=0.0.7",
]

[project.optional-dependencies]
test = [
    "pytest >=7.1.3,<8.0.0",
    "pytest-cov >=2.12.0,<4.0.0",
    "mypy ==0.971",
    "isort >=5.0.6,<6.0.0",
    "flake8 >=3.8.3,<6.0.0",
    "Flake8-pyproject>=1.1.0.post0",
    "autoflake >=1.4.0,<2.0.0",
]
dev = [
    "pre-commit >=2.17.0,<3.0.0",
    "uvicorn[standard] >=0.12.0,<0.19.0",
]


[project.urls]
Homepage = "{{cookiecutter.git_repository_url}}"
History = "{{cookiecutter.git_repository_url}}/releases"
Tracker = "{{cookiecutter.git_repository_url}}/issues"
Source = "{{cookiecutter.git_repository_url}}"


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
